@@ -212,6 +212,7 @@ Chronological list of authors
   - Domenico Marson
   - Ahmed Salah Ghoneim
   - Alexander Schlaich
+  - Josh Vermaas
 
 External code
 -------------
