@@ -270,5 +270,6 @@ Currently implemented transformations
    ./transformations/positionaveraging
    ./transformations/fit
    ./transformations/wrap
+   ./transformations/nojump
    ./transformations/boxdimensions
 
