@@ -759,3 +759,14 @@ doi = {10.1107/S0108767305015266}
     booktitle = {},
     id = {transformations}
 }
+
+@article{Kulke2022,
+  title = {Reversible Unwrapping Algorithm for Constant-Pressure Molecular Dynamics Simulations},
+  author = {Kulke, Martin and Vermaas, Josh V.},
+  year = {2022},
+  journal = {Journal of Chemical Theory and Computation}, 
+  volume = {18}, 
+  number = {10},
+  pages = {6161--6171},
+  doi = {10.1021/acs.jctc.2c00327}
+}
