@@ -37,6 +37,8 @@ Fixes
     (Issue #3336)
 
 Enhancements
+  * Add a nojump transformation, which unwraps trajectories so that particle
+    paths are continuous. (Issue #3703, PR #4031)
   * Added AtomGroup TopologyAttr to calculate gyration moments (Issue #3904,
     PR #3905)
   * Add support for TPR files produced by Gromacs 2023 (Issue #4047)
